--- a/src/less/app.less
+++ b/src/less/app.less
@@ -11,5 +11,6 @@
 @import 'pages/department';
 @import 'pages/risk';
 @import 'pages/audit';
+// @import 'pages/account';
 @import 'pages/sign';
 @import 'pages/faq';
