--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5783,11 +5783,7 @@ html.android .row .col-33 {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  font-size: 15px;
+  margin-bottom: 15px;
 }
 .agree-block .item-media {
   display: -webkit-box;
@@ -5804,21 +5800,12 @@ html.android .row .col-33 {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.agree-block .item-inner {
-  width: 100%;
+.agree-block .item-title {
+  height: 20px;
   margin-left: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.agree-block .item-inner .item-title {
-  -webkit-flex-shrink: 1;
-  -ms-flex: 0 1 auto;
-  flex-shrink: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .agree-block i.icon-form-checkbox {
   width: 18px !important;
@@ -6271,6 +6258,31 @@ html.android progress {
 #auditContent .info .iconfont {
   display: inline-block;
   vertical-align: middle;
+}
+#accountContent .list-block .smart-select .result {
+  padding: 5px 0 20px;
+  background-color: #efeff4;
+}
+#accountContent .list-block .smart-select .selected {
+  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%234c90cf' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
+  background-size: auto 15px;
+}
+#accountContent .list-block .smart-select .item-before {
+  float: left;
+  padding: 0 15px;
+  box-sizing: border-box;
+  width: 25%;
+  font-size: 14px;
+  color: #aeaeae;
+}
+#accountContent .list-block .smart-select .item-after {
+  float: left;
+  margin-left: 0;
+  box-sizing: border-box;
+  width: 100%;
+  max-height: 80px;
+  white-space: normal;
+  font-size: 14px;
 }
 #signContent .select-trigger {
   display: block;
