--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5649,9 +5649,6 @@ html.android .row .col-50 {
 html.android .row.no-gutter .col-50 {
   width: 50%;
 }
-html.android .row .col-33 {
-  width: 30%;
-}
 /* ==========================================================================
    Add mine
    ========================================================================== */
@@ -5665,8 +5662,8 @@ html.android .row .col-33 {
   width: calc(100% - 30px);
 }
 .fixed-bottom {
-  position: fixed;
-  bottom: 30px;
+  position: absolute;
+  bottom: 18px;
   width: 90%;
   /* Android */
   width: calc(100% - 30px);
@@ -5707,12 +5704,10 @@ html.android .row .col-33 {
   height: 30px;
 }
 .step {
-  position: absolute;
-  top: 44px;
-  left: 0;
-  z-index: 999;
   width: 100%;
   height: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 7px 0;
   margin: 0;
@@ -5738,7 +5733,7 @@ html.android .row .col-33 {
   width: 6px;
   height: 10px;
   margin-left: 99%;
-  margin-top: -13px;
+  margin-top: -15px;
   opacity: .5;
   background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M10,0l2,2l-8,8l8,8l-2,2L0,10L10,0z' fill='%23000'/></svg>");
   background-size: 100% auto;
@@ -5776,13 +5771,17 @@ html.android .row .col-33 {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
 }
 .agree-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   margin-bottom: 15px;
 }
 .agree-block .item-media {
@@ -5813,8 +5812,18 @@ html.android .row .col-33 {
   border-radius: 0 !important;
   background-color: #fff;
 }
+html.android .agree-block {
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+}
 html.android .agree-block .item-inner {
   width: 90%;
+  line-height: 16px;
+}
+html.android .agree-block .item-media {
+  display: block;
 }
 html.android .agree-block i.icon-form-checkbox {
   margin-top: -5px;
@@ -6058,9 +6067,6 @@ html.android progress {
   border-radius: 9px;
   -webkit-animation: stripes 2s linear infinite;
 }
-#profileContent .list-block {
-  margin-top: 0;
-}
 #profileContent input[type="text"],
 #profileContent input[type="tel"],
 #profileContent textarea,
@@ -6070,6 +6076,58 @@ html.android progress {
 }
 #profileContent .item-title {
   color: #999;
+}
+#profileContent .item-input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+#profileContent .item-input .mark {
+  padding: 0 10px;
+  text-align: center;
+}
+#profileContent input.select-date {
+  padding: 0;
+  width: 80px;
+  text-align: center;
+}
+#dateSelector .date-content {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+}
+#dateSelector .date-content .item-title {
+  white-space: normal;
+}
+#dateSelector .date-content .item-inner {
+  -webkit-flex-shrink: 1;
+  -ms-flex: 0 1 auto;
+  flex-shrink: 1;
+}
+#dateSelector select {
+  font-size: 15px;
+}
+#dateSelector .agree-block .item-title {
+  font-size: 15px;
 }
 #videoReady .tip {
   text-align: center;
@@ -6259,6 +6317,9 @@ html.android progress {
   display: inline-block;
   vertical-align: middle;
 }
+#accountContent .list-block ul {
+  border: 0 none;
+}
 #accountContent .list-block .smart-select .result {
   padding: 5px 0 20px;
   background-color: #efeff4;
@@ -6283,6 +6344,17 @@ html.android progress {
   max-height: 80px;
   white-space: normal;
   font-size: 14px;
+}
+#accountContent .list-block .smart-select .item-inner {
+  border: 0 none;
+}
+html.android .list-block .smart-select .selected {
+  background-image: none !important;
+}
+html.android .list-block .smart-select .selected:after {
+  width: 22px;
+  height: 17px;
+  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%234c90cf' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>") !important;
 }
 #signContent .select-trigger {
   display: block;
