--- a/src/less/pages/account.less
+++ b/src/less/pages/account.less
@@ -1,5 +1,8 @@
 #accountContent {
   .list-block{
+    ul {
+      border: 0 none;
+    }
     .smart-select {
       .result {
         padding: 5px 0 20px;
@@ -26,6 +29,18 @@
         white-space: normal;
         font-size: 14px;
       }
+      .item-inner {
+        border: 0 none;
+      }
     }
+  }
+}
+
+html.android .list-block .smart-select .selected {
+  background-image: none !important;
+  &:after {
+    width: 22px;
+    height: 17px;
+    background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%234c90cf' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>") !important;
   }
 }
