--- a/src/less/pages/department.less
+++ b/src/less/pages/department.less
@@ -101,14 +101,23 @@
       margin-right: 3px;
     }
   }
-  .item-title{
-    display: block;
-    width: 100%;
-    .item-value{
-      display: inline-block;
-      width: 78%;
-      text-align: right;
+  // .item-title{
+  //   display: block;
+  //   width: 100%;
+  //   .item-value{
+  //     display: inline-block;
+  //     width: 78%;
+  //     text-align: right;
+  //   }
+  // }
+
+}
+
+#depsDetailContent {
+  .list-block {
+    .item-value {
+      font-size: 15px;
+      color: #666;
     }
   }
 }
-
