--- a/src/css/app.css
+++ b/src/css/app.css
@@ -4958,21 +4958,21 @@ html.android .theme-pink progress {
   background-color: #ff2d55;
 }
 .color-blue {
-  color: #007aff;
+  color: #2d77e0;
 }
 .list-block .item-link.list-button.color-blue,
 .tabbar a.active.color-blue,
 a.color-blue {
-  color: #007aff;
+  color: #2d77e0;
 }
 .label-switch input[type="checkbox"]:checked + .checkbox.color-blue,
 .label-switch.color-blue input[type="checkbox"]:checked + .checkbox {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .color-blue.button:not(.button-fill),
 .color-blue.buttons-row .button,
 .theme-blue .button:not(.button-fill) {
-  border-color: #007aff;
+  border-color: #2d77e0;
 }
 html:not(.watch-active-state) .color-blue.button:not(.button-fill):active,
 html:not(.watch-active-state) .color-blue.buttons-row .button:active,
@@ -4980,48 +4980,48 @@ html:not(.watch-active-state) .theme-blue .button:not(.button-fill):active,
 .color-blue.button:not(.button-fill).active-state,
 .color-blue.buttons-row .button.active-state,
 .theme-blue .button:not(.button-fill).active-state {
-  background-color: rgba(0, 122, 255, 0.15);
+  background-color: rgba(45, 119, 224, 0.15);
 }
 .color-blue.button:not(.button-fill).active,
 .color-blue.buttons-row .button.active,
 .theme-blue .button:not(.button-fill).active {
-  background-color: #007aff;
+  background-color: #2d77e0;
   color: #fff;
 }
 .theme-blue .button.button-fill,
 .button.button-fill.color-blue {
-  background: #007aff;
+  background: #2d77e0;
   color: #fff;
 }
 .color-blue i.icon,
 .theme-blue i.icon,
 i.icon.color-blue,
 i.icon.theme-blue {
-  color: #007aff;
+  color: #2d77e0;
 }
 i.icon-next.color-blue,
 i.icon-next.theme-blue,
 .theme-blue i.icon-next {
-  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='%23007aff' d='M1,1.6l11.8,5.8L1,13.4V1.6 M0,0v15l15-7.6L0,0L0,0z'/></g></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='%232d77e0' d='M1,1.6l11.8,5.8L1,13.4V1.6 M0,0v15l15-7.6L0,0L0,0z'/></g></svg>");
 }
 i.icon-prev.color-blue,
 i.icon-prev.theme-blue,
 .theme-blue i.icon-prev {
-  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='%23007aff' d='M14,1.6v11.8L2.2,7.6L14,1.6 M15,0L0,7.6L15,15V0L15,0z'/></g></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15'><g><path fill='%232d77e0' d='M14,1.6v11.8L2.2,7.6L14,1.6 M15,0L0,7.6L15,15V0L15,0z'/></g></svg>");
 }
 i.icon-back.color-blue,
 i.icon-back.theme-blue,
 .theme-blue i.icon-back {
-  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M10,0l2,2l-8,8l8,8l-2,2L0,10L10,0z' fill='%23007aff'/></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 20'><path d='M10,0l2,2l-8,8l8,8l-2,2L0,10L10,0z' fill='%232d77e0'/></svg>");
 }
 i.icon-bars.color-blue,
 i.icon-bars.theme-blue,
 .theme-blue i.icon-bars {
-  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26'><path fill='%23007aff' d='M0,0h4v4H0V0z M8,1h34v2H8V1z M0,11h4v4H0V11z M8,12h34v2H8V12z M0,22h4v4H0V22z M8,23h34v2H8V23z'/></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26'><path fill='%232d77e0' d='M0,0h4v4H0V0z M8,1h34v2H8V1z M0,11h4v4H0V11z M8,12h34v2H8V12z M0,22h4v4H0V22z M8,23h34v2H8V23z'/></svg>");
 }
 .theme-blue a,
 .theme-blue .item-link.list-button {
-  color: #007aff;
+  color: #2d77e0;
 }
 .theme-blue .tabbar a,
 .tabbar.theme-blue a {
@@ -5029,32 +5029,32 @@ i.icon-bars.theme-blue,
 }
 .theme-blue .tabbar a.active,
 .tabbar.theme-blue a.active {
-  color: #007aff;
+  color: #2d77e0;
 }
 .theme-blue .range-slider input[type="range"]::-webkit-slider-thumb:before,
 .range-slider.theme-blue input[type="range"]::-webkit-slider-thumb:before {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .theme-blue label.label-checkbox input[type="checkbox"]:checked + .item-media i.icon-form-checkbox,
 .theme-blue label.label-checkbox input[type="radio"]:checked + .item-media i.icon-form-checkbox {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .theme-blue label.label-radio input[type="checkbox"]:checked ~ .item-inner,
 .theme-blue label.label-radio input[type="radio"]:checked ~ .item-inner {
-  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%23007aff' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%232d77e0' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
 }
 .theme-blue .slider-pagination-active {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .bg-blue,
 .button.button-fill.bg-blue,
 a.bg-blue,
 .list-block .swipeout-actions-left a.bg-blue,
 .list-block .swipeout-actions-right a.bg-blue {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .border-blue {
-  border-color: #007aff;
+  border-color: #2d77e0;
 }
 .theme-blue .info .hotline,
 .theme-blue .icon-wait,
@@ -5064,18 +5064,18 @@ a.bg-blue,
 .theme-blue #departmentContent .department-badge,
 .theme-blue #videoReady .tip .iconfont,
 .theme-blue #videoWait .wait-indicator .wait-num {
-  color: #007aff;
+  color: #2d77e0;
 }
 .theme-blue progress::-webkit-progress-value {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .theme-blue .select-radio[type="radio"]:checked + .select-trigger {
-  color: #007aff;
-  border-color: #007aff;
-  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%23007aff' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
+  color: #2d77e0;
+  border-color: #2d77e0;
+  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%232d77e0' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
 }
 .navbar-blue {
-  background-color: #007aff;
+  background-color: #2d77e0;
   color: #fff;
 }
 .navbar-blue a.link {
@@ -5091,10 +5091,10 @@ a.bg-blue,
 html.android .theme-blue label.label-radio input[type="checkbox"]:checked ~ .item-inner:after,
 html.android .theme-blue label.label-radio input[type="radio"]:checked ~ .item-inner:after,
 html.android .theme-blue .select-radio[type="radio"]:checked + .select-trigger:after {
-  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%23007aff' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
+  background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%232d77e0' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
 }
 html.android .theme-blue progress {
-  background-color: #007aff;
+  background-color: #2d77e0;
 }
 .color-green {
   color: #4cd964;
@@ -6284,14 +6284,9 @@ html.android progress {
   vertical-align: middle;
   margin-right: 3px;
 }
-#departmentContent .item-title {
-  display: block;
-  width: 100%;
-}
-#departmentContent .item-title .item-value {
-  display: inline-block;
-  width: 78%;
-  text-align: right;
+#depsDetailContent .list-block .item-value {
+  font-size: 15px;
+  color: #666;
 }
 #riskContent .list-block {
   counter-reset: options;
