--- a/src/less/framework7/colors.less
+++ b/src/less/framework7/colors.less
@@ -87,6 +87,6 @@
 .theme-mixin(e('yellow'), #ffcc00, 'ffcc00');
 .theme-mixin(e('orange'), #ff9500, 'ff9500');
 .theme-mixin(e('pink'), #ff2d55, 'ff2d55');
-.theme-mixin(e('blue'), #007aff, '007aff');
+.theme-mixin(e('blue'), #2d77e0, '2d77e0');
 .theme-mixin(e('green'), #4cd964, '4cd964');
 .theme-mixin(e('red'), #ff3b30, 'ff3b30');
