--- a/src/less/pages/guide.less
+++ b/src/less/pages/guide.less
@@ -21,6 +21,7 @@
     a {
       position: relative;
       display: block;
+      height: 120px;
       box-sizing: border-box;
       min-height: 90px;
       max-height: 210px;
@@ -38,6 +39,10 @@
         .pseudo-bg();
         right: 0;
         background-position: right bottom;
+      }
+      &.tel {
+        display: inline;
+        color: #ff8b1f;
       }
     }
     .kh {
