--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,6 +1,7 @@
 @import 'iconfont';
 @import 'framework7/framework7';
 @import 'theme';
+@import 'mixin';
 @import 'global';
 @import 'pages/guide';
 @import 'pages/login';
