--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6077,6 +6077,100 @@ html.android progress {
 #departmentContent .content-block-title {
   margin-top: 35px;
 }
+#departmentContent .package-block {
+  position: relative;
+  background-color: #fff;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+#departmentContent .package-block .col-50 {
+  margin-bottom: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+#departmentContent .package-block .content-block-title {
+  margin-top: 10px;
+}
+#departmentContent .package-block ul {
+  margin: 15px 15px 0 15px;
+  padding: 0;
+}
+#departmentContent .package-block li {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 40px;
+  list-style: none;
+  margin: 0;
+  padding: 10px 5px;
+  text-align: center;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+#departmentContent .package-block li.selected {
+  position: relative;
+  border-width: 2px;
+  border-color: #fd8615;
+}
+#departmentContent .package-block li.selected:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-image: url("../img/corner.png");
+  background-repeat: no-repeat;
+  background-size: 10px 10px;
+}
+@media all and (-webkit-min-device-pixel-ratio: 1.5), all and (-o-min-device-pixel-ratio: 3/2), all and (min--moz-device-pixel-ratio: 1.5), all and (min-device-pixel-ratio: 1.5) {
+  #departmentContent .package-block li.selected:after {
+    background-image: url("../img/corner@2x.png");
+    background-size: 10px 10px;
+  }
+}
+#departmentContent .package-block .brand {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  z-index: 99;
+  width: 40px;
+  height: 20px;
+  line-height: 23px;
+  color: #fff;
+  font-size: 13px;
+  background-color: #fd8615;
+  text-align: center;
+}
+#departmentContent .package-block .brand:after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 5px solid #fd8615;
+}
+#departmentContent .package-block .tar {
+  text-align: right;
+  padding-right: 15px;
+  padding-bottom: 10px;
+}
+#departmentContent .package-choosen {
+  margin: 10px 15px;
+  font-size: 12px;
+}
+#departmentContent .package-choosen .commission {
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: -1px;
+  color: #fd8615;
+  background: transparent;
+}
 #riskContent .list-block {
   counter-reset: options;
 }
