--- a/src/less/pages/account.less
+++ b/src/less/pages/account.less
@@ -11,6 +11,7 @@
       .selected {
         background-image: url("data:image/svg+xml;charset=utf-8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 13 10'><polygon fill='%234c90cf' points='11.6,0 4.4,7.2 1.4,4.2 0,5.6 4.4,10 4.4,10 4.4,10 13,1.4 '/></svg>");
         background-size: auto 15px;
+        background-repeat: no-repeat !important;
       }
       .item-before {
         float: left;
