修复 Android 下营业部选择佣金套餐排列错位问题

--- a/src/less/pages/department.less
+++ b/src/less/pages/department.less
@@ -136,3 +136,15 @@
     }
   }
 }
+
+html.android .package-block {
+  .row {
+    .clearfix();
+    display: block;
+    margin: 15px 0 0 0 !important;
+  }
+  .col-50 {
+    float: left;
+    margin: 0 2% 10px !important;
+  }
+}
