--- a/src/less/pages/department.less
+++ b/src/less/pages/department.less
@@ -116,6 +116,8 @@
 #depsDetailContent {
   .list-block {
     .item-value {
+      width: 65%;
+      text-align: right;
       font-size: 15px;
       color: #666;
     }
