--- a/src/less/pages/guide.less
+++ b/src/less/pages/guide.less
@@ -16,9 +16,9 @@
     width: 163px;
     margin: 0 auto;
   }
-  .entrance {
+  .entrances {
     padding: 20px 5px;
-    a {
+    .entrance {
       position: relative;
       display: block;
       height: 120px;
