--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6172,6 +6172,42 @@ html.android progress {
   color: #fd8615;
   background: transparent;
 }
+#departmentContent .research-result {
+  margin-left: 15px;
+  font-weight: normal;
+  font-size: 12px;
+  color: #808080;
+}
+#departmentContent .research-result .have-result b {
+  display: block;
+  font-weight: normal;
+  line-height: 20px;
+}
+#departmentContent .research-result .have-result span {
+  padding-right: 10px;
+}
+#departmentContent .item-input {
+  position: relative;
+}
+#departmentContent .item-input .item-search {
+  position: absolute;
+  right: 0px;
+  top: 7px;
+  width: 80px;
+  height: 32px;
+  line-height: 32px;
+  border: none;
+}
+#departmentContent .icon-noresult:before {
+  content: "\e601";
+}
+#departmentContent .error-result .icon-noresult {
+  font-size: 24px;
+  text-align: center;
+  color: #d42323;
+  vertical-align: middle;
+  margin-right: 3px;
+}
 html.android .package-block .row {
   display: block;
   margin: 15px 0 0 0 !important;
