--- a/src/less/pages/department.less
+++ b/src/less/pages/department.less
@@ -135,6 +135,46 @@
       background: transparent;
     }
   }
+  .research-result{
+    margin-left: 15px;
+    font-weight: normal;
+    font-size: 12px;
+    color: #808080;
+    .have-result{
+      b{
+        display: block;
+        font-weight: normal;
+        line-height: 20px;
+      }
+      span{
+        padding-right: 10px;
+      }
+    }
+  }
+  .item-input{
+    position: relative;
+    .item-search{
+      position: absolute;
+      right: 0px;
+      top: 7px;
+      width: 80px;
+      height: 32px;
+      line-height: 32px;
+      border: none;
+    }
+  }
+  .icon-noresult:before {
+    content: "\e601";
+  }
+  .error-result{
+    .icon-noresult{
+      font-size: 24px;
+      text-align: center;
+      color: #d42323;
+      vertical-align: middle;
+      margin-right: 3px;
+    }
+  }
 }
 
 html.android .package-block {
