--- a/src/less/app.less
+++ b/src/less/app.less
@@ -10,6 +10,7 @@
 @import 'pages/profile';
 @import 'pages/video';
 @import 'pages/department';
+@import 'pages/depository';
 @import 'pages/risk';
 @import 'pages/audit';
 @import 'pages/sign';
