--- a/src/css/app.css
+++ b/src/css/app.css
@@ -76,8 +76,84 @@
   content: "\e61a";
 }
 /* bank icon */
-.icon-icbc:before {
+/* 工商银行 */
+.icon-gongshang:before {
   content: "\e61e";
+  color: #b81c22;
+}
+/* 建设银行 */
+.icon-jianshe:before {
+  content: "\e620";
+  color: #003a8f;
+}
+/* 交通银行 */
+.icon-jiaotong:before {
+  content: "\e621";
+  color: #1d2088;
+}
+/* 农业银行 */
+.icon-nongye:before {
+  content: "\e623";
+  color: #169274;
+}
+/* 招商银行 */
+.icon-zhaoshang:before {
+  content: "\e628";
+  color: #e60012;
+}
+/* 中国银行 */
+.icon-zhongguo:before {
+  content: "\e62a";
+  color: #e60012;
+}
+/* 兴业银行 */
+.icon-xingye:before {
+  content: "\e626";
+  color: #e60012;
+}
+/* 浙商银行 */
+.icon-zheshang:before {
+  content: "\e629";
+  color: #e60012;
+}
+/* 中信银行 */
+.icon-zhongxin:before {
+  content: "\e62b";
+  color: #d6000f;
+}
+/* 华夏银行 */
+.icon-huaxia:before {
+  content: "\e61f";
+  color: #e60012;
+}
+/* 北京银行 */
+.icon-beijing:before {
+  content: "\e61d";
+  color: #e60012;
+}
+/* 南京银行 */
+.icon-nanjing:before {
+  content: "\e622";
+  color: #e60012;
+}
+/* 浦发银行 */
+.icon-pufa:before {
+  content: "\e625";
+  color: #e60012;
+}
+/* 邮政银行 */
+.icon-youzheng:before {
+  content: "\e627";
+  color: #e60012;
+}
+/* 深圳发展银行 */
+.icon-shenzhenfazhan:before {
+  content: "\e62c";
+  color: #0080cc;
+}
+/* 中国人民银行 */
+.icon-zhongguorenmin:before {
+  content: "\e624";
   color: #e60012;
 }
 html,
