--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -1,4 +1,4 @@
-.at2x(@path, @ext: "png", @w: auto, @h: auto) {
+.at2x(@path, @w: auto, @h: auto, @ext: "png") {
   background-image: url("../img/@{path}.@{ext}");
   background-repeat: no-repeat;
   background-size: @w @h;
