--- a/src/less/pages/depository.less
+++ b/src/less/pages/depository.less
@@ -42,7 +42,7 @@
   display: inline-block;
   width: 42px;
   height: 42px;
-  .at2x("icon/guangda", "png", 41px, 30px);
+  .at2x("icon/guangda", 41px, 30px);
   background-position: center center;
 }
 
@@ -50,6 +50,6 @@
   display: inline-block;
   width: 30px;
   height: 42px;
-  .at2x("icon/shanghai", "png", 30px, 30px);
+  .at2x("icon/shanghai", 30px, 30px);
   background-position: center center;
 }
