--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,6 +8,7 @@
 @import 'pages/collect';
 @import 'pages/cert';
 @import 'pages/profile';
+@import 'pages/password';
 @import 'pages/video';
 @import 'pages/department';
 @import 'pages/depository';
