--- a/src/less/pages/department.less
+++ b/src/less/pages/department.less
@@ -87,7 +87,7 @@
           display: inline-block;
           width: 10px;
           height: 10px;
-          .at2x(corner, "png", 10px, 10px);
+          .at2x(corner, 10px, 10px);
         }
       }
     }
