logo 变形问题修正

--- a/src/less/pages/guide.less
+++ b/src/less/pages/guide.less
@@ -13,7 +13,7 @@
   padding: 20px 0 0 !important;
   .logo {
     display: block;
-    width: 163px;
+    // width: 163px;
     margin: 0 auto;
   }
   .entrances {
