--- a/src/less/pages/risk.less
+++ b/src/less/pages/risk.less
@@ -34,3 +34,13 @@
   width: 100px;
   margin: 0 auto;
 }
+
+#riskResult {
+  .info-content {
+    margin-top: 20px !important;
+  }
+  .description {
+    margin-top: 20px;
+    line-height: 22px;
+  }
+}
