--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5872,6 +5872,7 @@ html.android .searchbar.searchbar-active .searchbar-cancel {
 }
 #guideContent .logo {
   display: block;
+  padding: 0 20px;
   margin: 0 auto;
 }
 #guideContent .entrances {
